<resources>
    <string name="app_name">Beacon</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="content">Content</string>
    <string name="username">Username</string>
    <string name="content_of_post">Content of post.</string>
    <string name="publish">Publish</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="title_map">Map</string>
    <string name="range">Range</string>
    <string name="inf">∞</string>
    <string name="_0m">0m</string>
    <string name="_0">0%</string>
    <string name="_100">100%</string>
    <string name="settingsProfileText"><b>User Profile</b>\nName, Email, etc.</string>
    <string name="settingsUnitsText"><b>Units Preference</b>\nSelect Units</string>
    <string name="post_as_anonymous">Post as anonymous</string>
    <string name="anonymous">Anonymous</string>
    <string name="content_of_reply">Content of reply.</string>
    <string name="add_image">Add Image</string>
    <string name="default_as_anonymous">Default as Anonymous</string>
</resources>