<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.PostCreateFragment"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/anonSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/post_as_anonymous"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Content of post."
        android:hint="@string/content_of_post"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:scrollbars="vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/postAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/add_image" />
        <Button
            android:id="@+id/publishPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/publish"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/jsonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>